--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -4,3 +4,8 @@
   transition: background-color 0.2s ease-out;
   min-height: 300vh;
 }
+
+.intro_wrapper {
+  background-color: transparent;
+  border: 3px border pink;
+}
