--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,11 +1,26 @@
 .home_div {
-  /* height: 100000px; */
-  /* background-color: lightblue; */
   transition: background-color 0.2s ease-out;
   min-height: 300vh;
 }
 
 .intro_wrapper {
   background-color: transparent;
-  border: 3px border pink;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0px 20px;
+  border-bottom: 2px solid black;
+}
+
+.intro_comment {
+  font-size: 35px;
+  font-weight: 500;
+  margin-top: 20px;
+  margin-top: 30px;
+  color: darkblue;
+}
+
+.info_wrapper {
+  display: flex;
+  flex-direction: column;
 }
