--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -25,3 +25,11 @@
   display: flex;
   flex-direction: column;
 }
+
+
+.project_wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
