--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
-/* 섹션 그룹 전체 여백 */
-.section_group {
-  margin-top: 30px;
-}
-
 /* 섹션 제목 스타일 통일 */
 .section_title {
   font-size: 24px;
@@ -13,12 +8,13 @@
   border-bottom: 2px solid #333;
 }
 
+.info_wrapper {
+  padding: 10px 0; /* 상하 패딩을 균일하게 설정 */
+}
 
-.info_wrapper,.skills_wrapper {
-  /* 모든 info wrapper가 동일한 너비를 갖도록 설정 */
-  /*  flex-basis: 0;  */ /* 기본 크기를 0으로 설정 */
-  /* flex-grow: 1; */ /* 남은 공간을 균등하게 차지 */
-
+.info_wrapper,
+.skills_wrapper,
+.project_wrapper {
   /* 한 줄에 2개만 나오도록 너비를 50%로 고정 */
   flex-basis: 50%;
   flex-grow: 0;
@@ -29,7 +25,7 @@
   /* 자격증/학력의 .item_container 스타일처럼 보이기 위해 테두리 제거 및 패딩 조정 */
   border-bottom: none;
   border-right: none;
-  padding: 10px 0; /* 상하 패딩을 균일하게 설정 */
+
   margin-bottom: 15px;
   margin: 0px 20px; /* 오른쪽 여백 제거 */
 
@@ -37,4 +33,3 @@
 
   padding-left: 0px; /* 세로줄과의 간격 확보 */
 }
-
