image upload, font update

--- a/src/pages/info/Info.css
+++ b/src/pages/info/Info.css
@@ -12,8 +12,18 @@
 .content {
   width: 50%;
 }
+
 .image_content {
   width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile_image {
+  width: 200px;
+  height: 250px;
+  object-fit: cover;
 }
 
 .name_content {
