--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: "IBM Bold";
+
+  /* 🚨 src/pages/home/Home.css에서 src/assests/fonts/ 로 가는 상대 경로를 사용합니다. */
+  src: url("../../assests/fonts/IBM_Plex_Sans_KR/IBMPlexSansKR-ExtraLight.ttf")
+    format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 .home_div {
   transition: background-color 0.2s ease-out;
   min-height: 300vh;
@@ -25,7 +35,7 @@
   align-items: center;
 
   /* 상하 여백 추가하여 바다 위/아래 공간 확보 */
-  padding: 150px 20px;
+  padding: 70px 20px;
   margin: 0px 20px;
   /* 바다 색상과 어울리게 테두리 색상 조정 */
   border-bottom: 2px solid rgba(255, 255, 255, 0.5);
@@ -34,8 +44,13 @@
 .intro_comment {
   font-size: 35px;
   font-weight: 500;
-  margin-top: 20px;
-  margin-top: 30px;
+  margin-top: 10px;
+  margin-top: 15px;
+  /* 폰트 이름을 적용합니다. */
+  /*font-family: "IBM Bold", sans-serif;*/
+
+  font-family: "Roboto", sans-serif;
+  font-weight: 700; /* Link에서 700을 불러왔다면 */
   /* 💡 이 부분을 제거하여 동적으로 변하는 색상을 상속받게 합니다. */
   /* color: darkblue; */
 }
