--- a/src/index.css
+++ b/src/index.css
@@ -28,50 +28,19 @@
   font-weight: normal;
   font-style: normal;
 }
-/* 섹션 제목 스타일 통일 */
-.section_title {
-  font-size: 24px;
-  font-weight: 800;
-  margin-top: 40px;
-  margin-bottom: 15px;
-  padding-bottom: 5px;
-  border-bottom: 2px solid #333;
-}
-.header_wrapper {
-  background-color: transparent;
+
+.title_left_blue_bar {
+  /* 모바일에서는 100% 너비 */
+  width: 100%;
+  /* 왼쪽에 파란색 세로줄*/
   display: flex;
-  justify-content: center;
-  align-items: center;
-
-  /* 상하 여백 추가하여 바다 위/아래 공간 확보 */
-  padding: 70px 20px;
-  margin: 0px 20px;
-  /* 바다 색상과 어울리게 테두리 색상 조정 */
-  border-bottom: 2px solid rgba(255, 255, 255, 0.5);
+  flex-direction: column;
+  border-left: 3px solid blue;
+  margin-bottom: 10px;
+  padding-left: 10px;
 }
 
-.info_wrapper {
-  padding: 10px 0; /* 상하 패딩을 균일하게 설정 */
-}
-
-.info_wrapper,
-.skills_wrapper,
-.project_wrapper {
-  /* 한 줄에 2개만 나오도록 너비를 50%로 고정 */
-  flex-basis: 50%;
-  flex-grow: 0;
-  flex-shrink: 0;
-
-  display: flex;
-
-  /* 자격증/학력의 .item_container 스타일처럼 보이기 위해 테두리 제거 및 패딩 조정 */
-  border-bottom: none;
-  border-right: none;
-
-  margin-bottom: 15px;
-  margin: 0px 20px; /* 오른쪽 여백 제거 */
-
-  /* 왼쪽 세로줄(포인트 스타일)을 item_container와 동일하게 적용 */
-
-  padding-left: 0px; /* 세로줄과의 간격 확보 */
+.item_title {
+  font-size: 1.5em;
+  font-weight: bold;
 }
