--- a/src/layout/content/about/AboutMe.css
+++ b/src/layout/content/about/AboutMe.css
@@ -10,18 +10,9 @@
 }
 
 .profile_wrapper {
-  /* 모바일에서는 100% 너비 */
-  width: 100%;
-
-  display: flex;
-  flex-direction: column;
-  border-left: 3px solid blue;
-  margin-bottom: 10px;
-  padding-left: 10px;
 }
 
-.item_title {
-  font-weight: bold;
+.item_content {
 }
 
 /* 태블릿 및 데스크톱 (768px 이상) */
