--- a/src/layout/content/skill/SkillList.css
+++ b/src/layout/content/skill/SkillList.css
@@ -4,9 +4,14 @@
 .skill_item_wrapper {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
 }
+
 .skill_item {
-  width: 55px;
+  max-width: 150px;
+  min-width: 40px;
+
   min-height: 25px;
   border: 1px solid black;
   background-color: black;
@@ -16,4 +21,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.skillList_wrapper {
+  display: flex;
+  flex-direction: column;
 }
