--- a/src/layout/content/skill/SkillList.css
+++ b/src/layout/content/skill/SkillList.css
@@ -13,7 +13,8 @@
   min-width: 40px;
 
   min-height: 25px;
-  border: 1px solid black;
+  border: 1px solid #000;
+  background-color: #000;
   color: white;
   border-radius: 3px;
   margin: 4px;
