--- a/src/layout/content/skill/SkillList.css
+++ b/src/layout/content/skill/SkillList.css
@@ -18,6 +18,7 @@
   color: white;
   border-radius: 3px;
   margin: 4px;
+  padding: 0px 4px;
   display: flex;
   align-items: center;
   justify-content: center;
